syntax = "proto3";

package space;

option go_package = "generated/space";

message CreateSpaceRequest {
  string name = 1;
  string description = 2;
  repeated string working_hours = 3;
  float latitude = 4;
  float longitude = 5;
  string faculty = 6;
  int64 floor = 7;
  string building = 8;
  string type = 9;
  string head_staff = 10;
  repeated int64 staff_list = 11;
  repeated string faculty_access_list = 12;
  repeated string room_list = 13;
  bool is_available = 14;
}

message GetAllSpaceRequest {}

message Space {
  int64 space_id = 1;
  string name = 2;
  string description = 3;
  repeated string working_hours = 4;
  float latitude = 5;
  float longitude = 6;
  string faculty = 7;
  int64 floor = 8;
  string building = 9;
  string type = 10;
  string head_staff = 11;
  repeated int64 staff_list = 12;
  repeated string faculty_access_list = 13;
  repeated string room_list = 14;
  bool is_available = 15;
}

message GetAllSpaceResponse {
  bool success = 1;
  string message = 2;
  repeated Space spaces = 3;
}

message EditSpaceRequest {
  int64 space_id = 1;
  string name = 2;
  string description = 3;
  repeated string working_hours = 4;
  float latitude = 5;
  float longitude = 6;
  string faculty = 7;
  int64 floor = 8;
  string building = 9;
  string type = 10;
  string head_staff = 11;
  repeated string faculty_access_list = 12;
  repeated string room_list = 13;
  bool is_available = 14;
}

message GetSpaceRequest {
  int64 space_id = 1;
}

message GetSpaceResponse {
  bool success = 1;
  int64 space_id = 2;
  string name = 3;
  string description = 4;
  repeated string working_hours = 5;
  float latitude = 6;
  float longitude = 7;
  string faculty = 8;
  int64 floor = 9;
  string building = 10;
  string type = 11;
  string head_staff = 12;
  repeated string faculty_access_list = 13;
  repeated string room_list = 14;
  bool is_available = 15;
}

message SpaceServiceResponse {
  bool success = 1;
  string message = 2;
}

message DeleteSpaceRequest {
  int64 space_id = 1;
}

message DisplaySpaceWithRoomInfoRequest {
  int64 id = 1;
}

message RoomResponse {
  int64 ID = 1;
  string CreatedAt = 2;
  string UpdatedAt = 3;
  string DeletedAt = 4;
  string name = 5;
  string description = 6;
  string room_number = 7;
  int64 capacity = 8;
  int64 min_reserve_capacity = 9;
  bool is_available = 10;
}

message SpaceResponse {
  int64 ID = 1;
  string CreatedAt = 2;
  string UpdatedAt = 3;
  string DeletedAt = 4;
  string name = 5;
  string description = 6;
  repeated string opening_day = 7;
  repeated string working_hour = 8;
  double latitude = 9;
  double longitude = 10;
  string faculty = 11;
  int64 floor = 12;
  string building = 13;
  string type = 14;
  string head_staff = 15;
  repeated string faculty_access_list = 16;
  repeated int64 staff_list = 17;
  repeated RoomResponse room_list = 18;
  bool is_available = 19;
}

message SpaceWithRoomInfoResponse {
  SpaceResponse space = 1;
  bool success = 2;
}

service SpaceService {
  rpc CreateSpace(CreateSpaceRequest) returns (GetSpaceResponse);
  rpc GetAllSpace(GetAllSpaceRequest) returns (GetAllSpaceResponse);
  rpc EditSpaceDetail(EditSpaceRequest) returns (SpaceServiceResponse);
  rpc DeleteSpace(DeleteSpaceRequest) returns (SpaceServiceResponse);
  rpc GetSpace(GetSpaceRequest) returns (GetSpaceResponse);
  rpc DisplaySpaceWithRoomInfo(DisplaySpaceWithRoomInfoRequest) returns (SpaceWithRoomInfoResponse);
}